2008-12-01  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/support.h: Fix masks for cipher algorithm
	flags.

2008-12-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix.8.xml: Document blowfish option.

	* configure.in: Check for crypt_gensalt_rn.
	* modules/pam_unix/pam_unix_passwd.c: Pass pamh to
	create_password_hash function.
	* modules/pam_unix/passverify.c (create_password_hash): Add
	blowfish support.
	* modules/pam_unix/passverify.h: Adjust create_password_hash
	prototype.
	* modules/pam_unix/support.c: Add support for blowfish option.
	* modules/pam_unix/support.h: Add defines for blowfish option.
	Jozsef Kadlecsik <kadlec@blackhole.kfki.hu>

2008-12-01  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_access/pam_access.8.xml: Fix description of nodefgroup
	option.

	* modules/pam_group/pam_group.c (is_same): Fix check for correct
	string length.

2008-11-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Check for xcrypt.h, fix typo in libaudit check.
	* modules/pam_cracklib/pam_cracklib.c: Include xcrypt.h if
	available.
	* modules/pam_unix/bigcrypt.c: Likewise.
	* modules/pam_unix/passverify.c: Likewise.
	* modules/pam_userdb/pam_userdb.c: Likewise.
	Jozsef Kadlecsik <kadlec@blackhole.kfki.hu>

	* doc/man/pam_getenv.3.xml: Document that application should
	not free return value.

	* doc/man/pam.3.xml: Add Note about thread-safeness of libpam
	functions.

2008-11-28  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/unix_update.c (set_password): Allow root to change
	passwords without verification of the old ones.

	* modules/pam_tally2/pam_tally2.c (tally_check): Fix info format
	to be the same as in pam_tally.

	* configure.in: Add modules/pam_timestamp/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_timestamp.xml.
	* doc/sag/pam_timestamp.xml: New.
	* libpam/pam_static_modules.h: Add pam_timestamp static struct.
	* modules/Makefile.am: Add pam_timestamp directory.
	* modules/pam_timestamp/Makefile.am: New.