@@ -9,4 +9,5 @@ Makefile.in
 README
 pam_timestamp.8
 pam_timestamp_check.8
-
+hmacfile
+pam_timestamp_check
