@@ -1,13 +1,13 @@
 #
 # Copyright (c) 2005 Thorsten Kukuk <kukuk@suse.de>
-# Copyright (c) 2005 Red Hat, Inc.
+# Copyright (c) 2005, 2008 Red Hat, Inc.
 #
 
 CLEANFILES = *~
 
 XMLS = README.xml pam_timestamp.8.xml pam_timestamp_check.8.xml
 man_MANS = pam_timestamp.8 pam_timestamp_check.8
-TESTS = tst-pam_timestamp
+TESTS = tst-pam_timestamp hmacfile
 
 EXTRA_DIST = $(man_MANS) hmactest.c $(XMLS) $(TESTS)
 
